--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ format = pylint
 ignore =
     E731  # Do not assign a lambda expression, use a def
     W504  # Line break occurred after a binary operator
+    W503  # Line break occurred after a binary operator
     F401  # Module imported but unused
     F841  # Local variable name is assigned to but never used
     W605  # Invalid escape sequence 'x'
