--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,9 +1,13 @@
 name: Lint
 
 on:
+  # Trigger the workflow on push or pull request, but only for the master branch
   push:
-    paths:
-      - '*.py'
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   flake8_py3:
