--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 pytorch-lightning >= 0.9.0
-torch >= 0.1.6
+torch >= 1.6.0
 transformers >= 3.2.0
 kaggle >= 1.5.8
 pandas >= 1.1.2
 scikit-learn >= 0.23.2
 datasets >= 1.0.2
+tqdm == 4.41.0
