--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ addopts =
     --strict-markers
     --doctest-modules
     --durations=0
+    --color=yes
 # Silence numpy builtin type alias warnigns in third party libs
 # https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations
 filterwarnings = ignore:.*deprecated alias.*:DeprecationWarning:tensorboard.*tensorflow_stub*:
