--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,12 +2,9 @@ name: Lint
 
 on:
   # Trigger the workflow on push or pull request, but only for the master branch
-  push:
-    branches:
-      - master
+  push: {}
   pull_request:
-    branches:
-      - master
+    branches: [master]
 
 jobs:
   flake8_py3:
@@ -15,14 +12,11 @@ jobs:
     steps:
       - name: Setup Python
         uses: actions/setup-python@v1
-        with:
-          python-version: 3
-          architecture: x64
-      - name: Checkout PyTorch
+      - name: Checkout
         uses: actions/checkout@master
       - name: Install flake8
         run: pip install flake8
-      - name: Run flake8 --ignore=W503
+      - name: Run flake8
         uses: suo/flake8-github-action@releases/v1
         with:
           checkName: 'flake8_py3'   # NOTE: this needs to be the same as the job name
