--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,9 +2,7 @@ name: Lint
 
 on:
   # Trigger the workflow on push or pull request, but only for the master branch
-  push:
-    branches:
-      - master
+  push: {}
   pull_request:
     branches:
       - master
