--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,11 +29,11 @@ repos:
         args: [--py36-plus]
         name: Upgrade code
 
-#  - repo: https://github.com/PyCQA/isort
-#    rev: 5.9.3
-#    hooks:
-#      - id: isort
-#        name: Sort imports
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.9.3
+    hooks:
+      - id: isort
+        name: Sort imports
 
   # TODO
   #- repo: https://github.com/pre-commit/mirrors-yapf
