--- a/setup.cfg
+++ b/setup.cfg
@@ -48,3 +48,9 @@ license_file = LICENSE
 description-file = README.md
 # long_description = file:README.md
 # long_description_content_type = text/markdown
+
+[isort]
+# https://pycqa.github.io/isort/docs/configuration/options.html
+line_length = 120
+multi_line_output = 3
+known_first_party = detoxify
