--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -3,9 +3,7 @@ name: CI testing
 # see: https://help.github.com/en/actions/reference/events-that-trigger-workflows
 on:
   # Trigger the workflow on push or pull request, but only for the master branch
-  push:
-    branches:
-      - master
+  push: {}
   pull_request:
     branches:
       - master
