--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pytorch-lightning >= 1.0.0, < 1.5.0
 torch >= 1.10.0
-transformers >= 3.2.0
+transformers != 4.18.0
 kaggle >= 1.5.8
 pandas >= 1.1.2
 scikit-learn >= 0.23.2
