--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,8 +39,8 @@ repos:
     hooks:
       - id: ufmt
         additional_dependencies:
-          - black == 21.9b0
-          - usort == 0.6.4
+          - black == 22.6
+          - usort == 1.0.2
 
   # TODO
   #- repo: https://github.com/executablebooks/mdformat
