--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pytorch-lightning > 1.5.0
 torch >= 1.10.0
-transformers == 4.22.1 # pin to this version due to #75
+transformers == 4.22.1
 kaggle >= 1.5.8
 pandas >= 1.1.2
 scikit-learn >= 0.23.2
