--- a/requirements-train.txt
+++ b/requirements-train.txt
@@ -1,6 +1,7 @@
 -r requirements.txt
 
 pytorch-lightning >= 1.0.0, < 1.5.0
+torchmetrics <0.10
 kaggle >= 1.5.8
 pandas >= 1.1.2
 scikit-learn >= 0.23.2
