--- a/.github/workflows/update_wheels.yml
+++ b/.github/workflows/update_wheels.yml
@@ -30,7 +30,7 @@ jobs:
     if: github.event_name == 'release' && github.event.action == 'published'
     environment: pypi
     permissions:
-      id-token: PYPI_TOKEN
+      id-token: ${{ secrets.PYPI_TOKEN }}
 
     steps:
     - uses: actions/download-artifact@v4
