--- a/.github/workflows/update_wheels.yml
+++ b/.github/workflows/update_wheels.yml
@@ -1,6 +1,9 @@
 name: Release
 
 on:
+  # push:
+  #   branches:
+  #     - main
   workflow_dispatch:
   pull_request:
   release:
@@ -29,8 +32,6 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'release' && github.event.action == 'published'
     environment: pypi
-    permissions:
-      id-token: ${{ secrets.PYPI_TOKEN }}
 
     steps:
     - uses: actions/download-artifact@v4
@@ -40,3 +41,6 @@ jobs:
         merge-multiple: true
 
     - uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_TOKEN }}
