Prune setup.cfg
Moves the pytest config from setup.cfg to pyproject.toml

Removes some sections that didn't seem necessary or duplicate
metadata in pyproject.toml (resolves "Usage of dash-separated
'description-file' will not be supported in future" build warning)

Keeps only the flake8 config that doesn't support pyproject.toml: PyCQA/flake8#234

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,3 +45,21 @@ known_first_party = [
 skip_glob = []
 profile = "black"
 line_length = 120
+
+[tool.pytest.ini_options]
+norecursedirs = [
+    ".git",
+    "dist",
+    "build",
+]
+addopts = [
+    "--strict-markers",
+    "--doctest-modules",
+    "--durations=0",
+    "--color=yes",
+]
+filterwarnings = [
+    "ignore:.*deprecated alias.*:DeprecationWarning:tensorboard.*tensorflow_stub*:",
+    "ignore:.*deprecated alias.*:DeprecationWarning:tensorboard.*tensor_util*:",
+    "ignore:.*deprecated alias.*:DeprecationWarning:pyarrow.*pandas_compat*:",
+]
