Allow newer torch
Remove the torch upper bound, to allow installing a version compatible with numpy 2.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ classifiers = [
 requires-python = ">=3.9,<3.12"
 dependencies = [
     "sentencepiece >= 0.1.94",
-    "torch < 2.2",
+    "torch",
     "transformers >= 3",
 ]
 
