Add pyright github action
Adds type checking with pyright

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ dev = [
     "scikit-learn >= 0.23.2",
     "tqdm",
     "pre-commit",
-    "numpy>=2"
+    "numpy>=2",
+    "pyright"
 ]
 
 [tool.black]
